plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.blackjack'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'dev.miku:r2dbc-mysql:0.8.2.RELEASE'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    compileOnly("org.projectlombok:lombok:1.18.38")
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    annotationProcessor("org.projectlombok:lombok:1.18.38")

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'

    testImplementation 'org.mockito:mockito-core:5.14.0'

    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
    testCompileOnly("org.projectlombok:lombok:1.18.38")
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

configurations {
    mockitoAgent
}

dependencies {
    mockitoAgent('org.mockito:mockito-core:5.14.0') {
        transitive = false
    }
}

tasks {
    test {
        jvmArgs += "-Xshare:off"
        jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}